jdk-20 changes
MemoryAddress to MemorySegment. 'foreign' from incubator to preview.